// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParagraphContainer should render correctly 1`] = `
.c1 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c3 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

.c2 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c2:focus,
.c2:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c0 {
  position: relative;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
>
  <p
    class="c1"
  >
    <b>
      This is some text.
    </b>
    <a
      class="c2"
      href="/bbc-test"
    >
      Some text
      <b>
         for the 
      </b>
      <i
        class="c3"
      >
         link!
      </i>
    </a>
  </p>
</div>
`;

exports[`ParagraphContainer should render correctly with inline block 1`] = `
.c1 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c3 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c3:focus,
.c3:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c2 {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c0 {
  position: relative;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
>
  <p
    class="c1"
  >
    <b>
      This is some text.
    </b>
    <span
      class="c2"
      lang="fa"
    >
      <a
        aria-label="چیسربرگرundefined"
        class="c3"
        href="https://google.com"
      >
        چیسربرگر
      </a>
    </span>
  </p>
</div>
`;
